@startuml

entity MedicinalProductDefinition {
    mpId
    fullName
}

entity Organization {
    name: String
}

entity PackagedProductDefinition {
    pcId
    description: String
}

entity Contains {
    packageSize: Integer
    unitOfPresentation
}

entity ManufactoredItemDefinition {
    phpId
    doseForm
    atcCode: String
    routeOfAdministration
}

entity Ingredient {
    strengthPresentation
    strengthConcentration
    referenceSubstance: HAVE_NO_IDEA
    referenceStrength: HAVE_NO_IDEA
}

entity SubstanceDefinition {
    code: EU-SMS
    name: String
}

MedicinalProductDefinition "1" -- "1" PackagedProductDefinition : package
MedicinalProductDefinition "*" -o "1" Organization : "Marketing Authorization Holder"

PackagedProductDefinition "*" -- "*" ManufactoredItemDefinition
Contains . (PackagedProductDefinition, ManufactoredItemDefinition)

ManufactoredItemDefinition "*" - "*" SubstanceDefinition
(ManufactoredItemDefinition, SubstanceDefinition) .. Ingredient

@enduml